--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -8,6 +8,5 @@ FastReplication=False
 InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
-+GameplayTagList=(Tag="Ability.Bullet.Line1",DevComment="fire 1 lines of bullet")
-+GameplayTagList=(Tag="Ability.Bullet.Line2",DevComment="fire 2 lines of bullet")
++GameplayTagList=(Tag="Ability.Bullet",DevComment="")
 
