--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Art_Test/Scene/Maps/TopDownMap.TopDownMap
 EditorStartupMap=/Game/Art_Test/Scene/Maps/TopDownMap.TopDownMap
-GlobalDefaultGameMode="/Script/Survivor.SurvivorGameMode"
+GlobalDefaultGameMode=/Game/BP/Settings/BP_GameMode.BP_GameMode_C
 
 [/Script/Engine.RendererSettings]
 r.Mobile.EnableNoPrecomputedLightingCSMShader=1
