--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -9,4 +9,5 @@ InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.Bullet",DevComment="")
++GameplayTagList=(Tag="Ability.Laser",DevComment="")
 
