--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -14,7 +14,9 @@ r.DynamicGlobalIlluminationMethod=1
 
 r.ReflectionMethod=1
 
-r.Shadow.Virtual.Enable=1
+r.Shadow.Virtual.Enable=0
+r.Mobile.ShadingPath=1
+r.AntiAliasingMethod=1
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
