let AEnemyBase inherit from ACharacter

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -117,6 +117,17 @@ ManualIPAddress=
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Enemy")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Projectile")
 +EditProfiles=(Name="Pawn",CustomResponses=((Channel="Destructible",Response=ECR_Ignore)))
++EditProfiles=(Name="UI",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="Enemy",Response=ECR_Ignore),(Channel="Projectile",Response=ECR_Ignore)))
++EditProfiles=(Name="Trigger",CustomResponses=((Channel="Enemy",Response=ECR_Overlap),(Channel="Projectile",Response=ECR_Overlap)))
++EditProfiles=(Name="OverlapAll",CustomResponses=((Channel="Enemy",Response=ECR_Overlap),(Channel="Projectile",Response=ECR_Overlap)))
++EditProfiles=(Name="OverlapAllDynamic",CustomResponses=((Channel="Enemy",Response=ECR_Overlap),(Channel="Projectile",Response=ECR_Overlap)))
++EditProfiles=(Name="IgnoreOnlyPawn",CustomResponses=((Channel="Enemy",Response=ECR_Ignore)))
++EditProfiles=(Name="OverlapOnlyPawn",CustomResponses=((Channel="Enemy",Response=ECR_Overlap)))
++EditProfiles=(Name="Spectator",CustomResponses=((Channel="Enemy",Response=ECR_Ignore),(Channel="Projectile",Response=ECR_Ignore)))
++EditProfiles=(Name="CharacterMesh",CustomResponses=((Channel="Enemy",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="Projectile",Response=ECR_Ignore)))
++EditProfiles=(Name="Destructible",CustomResponses=((Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="Enemy",Response=ECR_Ignore),(Channel="Projectile",Response=ECR_Ignore)))
++EditProfiles=(Name="InvisibleWall",CustomResponses=((Channel="Destructible",Response=ECR_Ignore)))
++EditProfiles=(Name="InvisibleWallDynamic",CustomResponses=((Channel="Destructible",Response=ECR_Ignore)))
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
 -ProfileRedirects=(OldName="StaticMeshComponent",NewName="BlockAllDynamic")
