--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Art_Test/Scene/Maps/TopDownMap.TopDownMap
-EditorStartupMap=/Game/Art_Test/Scene/Maps/TopDownMap.TopDownMap
+GameDefaultMap=/Game/Art_Test/Scene/Scene02_Test/Maps/Sc_DesertLand_001.Sc_DesertLand_001
+EditorStartupMap=/Game/Art_Test/Scene/Scene02_Test/Maps/Sc_DesertLand_001.Sc_DesertLand_001
 GlobalDefaultGameMode=/Game/BP/Settings/BP_GameMode.BP_GameMode_C
 
 [/Script/Engine.RendererSettings]
