--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -17,6 +17,7 @@ r.ReflectionMethod=1
 r.Shadow.Virtual.Enable=0
 r.Mobile.ShadingPath=1
 r.AntiAliasingMethod=1
+r.Mobile.AntiAliasing=2
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
