--- a/Survivor.uproject
+++ b/Survivor.uproject
@@ -21,6 +21,10 @@
 		{
 			"Name": "GameplayAbilities",
 			"Enabled": true
+		},
+		{
+			"Name": "GeometryScripting",
+			"Enabled": true
 		}
 	]
 }
