add character damage and dead events

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -10,4 +10,6 @@ NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.Bullet",DevComment="")
 +GameplayTagList=(Tag="Ability.Laser",DevComment="")
++GameplayTagList=(Tag="Damage.Melee",DevComment="")
++GameplayTagList=(Tag="PawnState.ImmunityHpDamage",DevComment="")
 
