--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -5,3 +5,6 @@ ProjectName=Top Down Game Template
 [/Script/Survivor.SurvivorCharacter]
 FixedCameraPitch=-45.0
 FixedCameraDistance=1500.0
+
+[/Script/GameplayAbilities.AbilitySystemGlobals]
+bUseDebugTargetFromHud=true
