add monster config

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -283,3 +283,6 @@ ManualIPAddress=
 [/Script/Slate.SlateSettings]
 bExplicitCanvasChildZOrder=True
 
+
+[CoreRedirects]
++ClassRedirects=(OldName="/Script/Survivor.EnemyBase",NewName="/Script/Survivor.MonsterBase")
