--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -10,6 +10,10 @@ NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.Bullet",DevComment="")
 +GameplayTagList=(Tag="Ability.Laser",DevComment="")
++GameplayTagList=(Tag="Attribute.BulletWeapon",DevComment="")
++GameplayTagList=(Tag="Attribute.Character",DevComment="")
++GameplayTagList=(Tag="Attribute.LaserWeapon",DevComment="")
++GameplayTagList=(Tag="Attribute.Monster",DevComment="")
 +GameplayTagList=(Tag="Damage.Melee",DevComment="")
 +GameplayTagList=(Tag="PawnState.ImmunityHpDamage",DevComment="")
 
