implement laser damage calculate

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -292,4 +292,5 @@ bExplicitCanvasChildZOrder=True
 
 [CoreRedirects]
 +ClassRedirects=(OldName="/Script/Survivor.EnemyBase",NewName="/Script/Survivor.MonsterBase")
++ClassRedirects=(OldName="/Script/Survivor.BulletDamageCalc",NewName="/Script/Survivor.WeaponBulletDamageCalc")
 
